[gd_scene load_steps=17 format=2]

[ext_resource path="res://sprites/grenade.png" type="Texture" id=1]
[ext_resource path="res://player/grenade.gd" type="Script" id=2]
[ext_resource path="res://sprites/grenade_explosion.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/grenade-boom.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/grenade-tink-2.wav" type="AudioStream" id=5]

[sub_resource type="PhysicsMaterial" id=1]
rough = true
bounce = 0.5

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "explode",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 30.0

[sub_resource type="CircleShape2D" id=11]
radius = 20.0

[node name="Grenade" type="RigidBody2D" groups=[
"bullets",
]]
collision_layer = 512
collision_mask = 522
physics_material_override = SubResource( 1 )
contacts_reported = 1
contact_monitor = true
can_sleep = false
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.1, 0.1 )
shape = SubResource( 10 )

[node name="ExplosionRadius" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionRadius"]
shape = SubResource( 11 )

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Sounds" type="Node" parent="."]

[node name="Tink" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )

[node name="Explode" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Grenade_body_entered"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
